# flightradar24-api-rs

./: Cargo.toml
src/: lib.rs
src/apis/: api_caller.rs  mod.rs
src/apis/flight_provider/: flight_provider.rs  flight_provider_request.rs  mod.rs
src/apis/flight_provider/raw_models/: aircraft_model_raw.rs  aircraft_raw.rs  airline_code_raw.rs  airline_raw.rs  airport_instance_country_raw.rs  airport_instance_info_raw.rs  airport_instance_position_raw.rs  airport_instance_raw.rs  airport_instance_region_raw.rs  airport_instance_timezone_raw.rs  airport_raw.rs  flight_identification_number_raw.rs  flight_identification_raw.rs  flight_raw.rs  flight_status_raw.rs  flight_trail_position_raw.rs  mod.rs
src/apis/live_area_information_provider/: flight_brief_model.rs  live_area_information.rs  mod.rs
src/models/: area.rs  point.rs
