[package]
name = "flightradar24-api"
version = "0.1.0"
authors = ["KoStard <rub099999720@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-useragent = "0.1.3"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0.117"
serde_json = "1.0.59"
bigdecimal = "0.2.0"
futures = "0.3"
tokio = { version = "0.2.5", features = ["full"]}

[dev-dependencies]
tokio-test = "0.2.1"